--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "author": "Salah Khalaf",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
